--- a/src/app/dashboard/components/product-management/get-product/get-product.component.html
+++ b/src/app/dashboard/components/product-management/get-product/get-product.component.html
@@ -84,10 +84,8 @@
               <input
                 pInputText
                 type="text"
-                (input)="
-                  dt2.filterGlobal($any($event.target).value, 'contains')
-                "
-                placeholder="Search keyword"
+                (input)="dt2.filterGlobal($any($event.target).value, 'contains')"
+                placeholder="{{'cardForm.search' | transloco}}"
               />
             </span>
           </div>
