--- a/src/app/pages/components/account/usercontact/usercontact.component.scss
+++ b/src/app/pages/components/account/usercontact/usercontact.component.scss
@@ -11,6 +11,8 @@ $background-color: #ecf0f1;
   width: 100%;
   max-width: 100%;
   margin: 0 auto;
+  border-left: 1px solid  #d5d6d8;
+  padding-left: 15px;
 
 
   .row {
