--- a/src/app/pages/components/account/userpassword/userpassword.component.html
+++ b/src/app/pages/components/account/userpassword/userpassword.component.html
@@ -22,19 +22,31 @@
           }}</label>
         </span>
         <small
-          *ngIf="
-            newpassForm.get('password').value !=
-            newpassForm.get('confirmpassword').value
-          "
-          class="block text-red-500"
-        >
-          {{
-            newpassForm.get("confirmpassword").errors != null &&
-            newpassForm.get("confirmpassword").errors["required"]
-              ? ("registerForm.confirmSmallSecond" | transloco)
-              : ""
-          }}
-        </small>
+        *ngIf="
+          newpassForm.get('currentPassword')?.invalid &&
+          newpassForm.get('currentPassword')?.touched
+        "
+        class="text-red-500"
+      >
+        {{
+          newpassForm.get("currentPassword").errors != null &&
+          newpassForm.get("currentPassword").errors["whitespace"]
+            ? ("registerForm.confirmSmall" | transloco)
+            : ""
+        }}
+         {{
+          newpassForm.get("currentPassword").errors != null &&
+          newpassForm.get("currentPassword").hasError("minlength")
+            ? ("registerForm.passwordSmallLength" | transloco)
+            : ""
+        }}
+        {{
+          newpassForm.get("currentPassword").errors != null &&
+          newpassForm.get("currentPassword").errors["required"]
+            ? ("registerForm.passwordSmall" | transloco)
+            : ""
+        }}
+      </small>
       </div>
       <div class="flex w-full">
         <span class="p-float-label">
@@ -50,7 +62,7 @@
             </ng-template>
             <ng-template pTemplate="footer">
               <p-divider></p-divider>
-              <p class="mt-2">{{ "userpassForm.suggetions" | transloco }}</p>
+              <p class="mt-2">{{ "userpassForm.suggestions" | transloco }}</p>
               <ul class="pl-2 ml-2 mt-0" style="line-height: 1.5">
                 <li>{{ "userpassForm.lowercase" | transloco }}</li>
                 <li>{{ "userpassForm.uppercase" | transloco }}</li>
@@ -69,6 +81,32 @@
           }}</label>
         </span>
       </div>
+      <small
+      *ngIf="
+        newpassForm.get('password')?.invalid &&
+        newpassForm.get('password')?.touched
+      "
+      class="text-red-500"
+    >
+      {{
+        newpassForm.get("password").errors != null &&
+        newpassForm.get("password").errors["whitespace"]
+          ? ("registerForm.confirmSmall" | transloco)
+          : ""
+      }}
+       {{
+        newpassForm.get("password").errors != null &&
+        newpassForm.get("password").hasError("minlength")
+          ? ("registerForm.passwordSmallLength" | transloco)
+          : ""
+      }}
+      {{
+        newpassForm.get("password").errors != null &&
+        newpassForm.get("password").errors["required"]
+          ? ("registerForm.passwordSmall" | transloco)
+          : ""
+      }}
+    </small>
       <div class="flex w-full">
         <span class="p-float-label">
           <i class="pi pi-lock" style="color: #000"></i>
@@ -102,9 +140,40 @@
           }}</label>
         </span>
       </div>
+      <small
+      *ngIf="
+        newpassForm.get('confirmpassword')?.invalid &&
+        newpassForm.get('confirmpassword')?.touched
+      "
+      class="text-red-500"
+    >
+      {{
+        newpassForm.get("confirmpassword").errors != null &&
+        newpassForm.get("confirmpassword").errors["whitespace"]
+          ? ("registerForm.confirmSmall" | transloco)
+          : ""
+      }}
+       {{
+        newpassForm.get("confirmpassword").errors != null &&
+        newpassForm.get("confirmpassword").hasError("minlength")
+          ? ("registerForm.passwordSmallLength" | transloco)
+          : ""
+      }}
+      {{
+        newpassForm.get("confirmpassword").errors != null &&
+        newpassForm.get("confirmpassword").errors["required"]
+          ? ("registerForm.passwordSmall" | transloco)
+          : ""
+      }}
+    </small>
+      <div *ngIf="newpassForm.get('confirmpassword').value?.length >= 8 && newpassForm.get('password').value?.length >= 8">
+        <small *ngIf="newpassForm.get('password').value !== newpassForm.get('confirmpassword').value" class="block text-red-500">
+           {{ 'registerForm.confirmSmallSecond' | transloco }}
+        </small>
+     </div>
       <div class="flex w-full">
         <span class="button-style">
-          <button pButton class="button">
+          <button pButton class="button" (click)="onSubmit()">
             {{ "userpassForm.buttonLabel" | transloco }}
           </button>
         </span>
