--- a/src/app/pages/components/account/userpassword/userpassword.component.scss
+++ b/src/app/pages/components/account/userpassword/userpassword.component.scss
@@ -11,6 +11,7 @@ $background-color: #ecf0f1;
   height: 100%;
   align-items: flex-start;
   justify-content: center;
+  border-left: 1px solid  #d5d6d8;
 }
 
 
@@ -18,6 +19,8 @@ $background-color: #ecf0f1;
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
+  padding: 30px;
 
 
   .row {
@@ -27,7 +30,7 @@ $background-color: #ecf0f1;
     width: 100%;
 
     .header {
-      width: 70%;
+      width: 100%;
       p {
         margin: 10px;
         color: #000;
@@ -37,7 +40,9 @@ $background-color: #ecf0f1;
     .flex {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: flex-start;
+      margin-top: 15px;
+      width: 100%;
 
       .p-float-label {
         margin-top:10px;
@@ -61,8 +66,7 @@ $background-color: #ecf0f1;
           padding: 10px;
           padding-left: 35px;
           font-size: 1rem;
-          border: 1px solid #3498db;
-
+          border: 1px solid $dark-text;
           background-color: transparent;
           color: #34495e;
           transition: border-color 0.3s;
@@ -98,7 +102,7 @@ $background-color: #ecf0f1;
       button {
         width: 100%;
         padding: 15px;
-        background-color: #3498db;
+        background-color: $dark-text;
         justify-content: center;
         color: #ecf0f1;
         font-size: 1rem;
@@ -108,7 +112,7 @@ $background-color: #ecf0f1;
         transition: background-color 0.3s;
 
         &:hover {
-          background-color: #1071b3;
+          background-color: $dark-text;
         }
       }
     }
@@ -118,6 +122,10 @@ $background-color: #ecf0f1;
 :host ::ng-deep {
   .radio {
     margin-right: 5px;
+  }
+
+  .password{
+    width: 100%;
   }
 
   .password.p-password {
@@ -138,7 +146,7 @@ $background-color: #ecf0f1;
       padding: 10px;
       padding-left: 35px;
       font-size: 1rem;
-      border: 1px solid #3498db;
+      border: 1px solid $dark-text;
 
       background-color: transparent;
       color: #34495e;
