--- a/src/app/pages/components/orders/content-table/content-table.component.html
+++ b/src/app/pages/components/orders/content-table/content-table.component.html
@@ -1,7 +1,7 @@
 <div class="surface-section px-4 py-8 md:px-6 lg:px-8 border-1 surface-border border-round">
   <div class="flex flex-column md:flex-row justify-content-between align-items-center mb-4">
     <div class="flex flex-column justify-content-center text-center md:text-left">
-      <span class="text-700 text-2xl mb-2">{{'contentOrdersForm.header' |  transloco}}</span>
+      <div class="text-900 text-4xl mb-4">{{'contentOrdersForm.header' |  transloco}}</div>
     </div>
   </div>
   <div class="surface-card grid grid-nogutter border-round shadow-2 mb-6" *ngFor="let order of orders">
