--- a/src/app/pages/components/account/account-sidebar/account-sidebar.component.scss
+++ b/src/app/pages/components/account/account-sidebar/account-sidebar.component.scss
@@ -9,10 +9,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    float: left;
+
 
     a {
+      display: flex;
       width: 100%;
+      justify-content: flex-start;
+      float: left;
       text-decoration: none;
       color: #555;
       margin: 10px;
