--- a/src/app/pages/components/account/account.component.scss
+++ b/src/app/pages/components/account/account.component.scss
@@ -37,7 +37,7 @@ $background-color: #ecf0f1;
 
 
   @media (min-width: $breakpoint-tablet) {
-    max-width: 250px;
+    max-width: 350px;
     height: 100%;
     margin-bottom: 0;
   }
@@ -50,6 +50,7 @@ $background-color: #ecf0f1;
 
   @media (min-width: $breakpoint-desktop) {
     width: calc(100% - 250px);
+    height: calc(100% - 250px);
 
   }
 }
