--- a/src/app/pages/components/account/userinfo/userinfo.component.scss
+++ b/src/app/pages/components/account/userinfo/userinfo.component.scss
@@ -56,7 +56,7 @@ $background-color: #ecf0f1;
             border-radius:5px;
             padding-left: 35px;
             font-size: 1rem;
-            border: 1px solid #3498db;
+            border: 1px solid $dark-text;
             background-color: transparent;
             color: #34495e;
             transition: border-color 0.3s;
@@ -100,7 +100,7 @@ $background-color: #ecf0f1;
           button {
             width: calc(100% - 30px);
             padding: 10px;
-            background-color: #3498db;
+            background-color: $dark-text;
             justify-content: center;
             color: #ecf0f1;
             font-size: 1rem;
@@ -110,7 +110,7 @@ $background-color: #ecf0f1;
             transition: background-color 0.3s;
 
             &:hover {
-              background-color: #1071b3;
+              background-color: $dark-text;
             }
           }
         }
@@ -132,7 +132,7 @@ $background-color: #ecf0f1;
                 padding: 10px;
                 padding-left: 30px;
                 font-size: 1rem;
-                border: 1px solid #3498db;
+                border: 1px solid $dark-text;
                 background-color: transparent;
                 color: #34495e;
                 transition: border-color 0.3s;
@@ -167,7 +167,7 @@ $background-color: #ecf0f1;
       padding: 10px;
       padding-left: 30px;
       font-size: 1rem;
-      border: 1px solid #3498db;
+      border: 1px solid $dark-text;
       background-color: transparent;
       color: #34495e;
       transition: border-color 0.3s;
@@ -205,7 +205,7 @@ $background-color: #ecf0f1;
     }
 
     .button{
-      background-color: $primary-color;
+      background-color: $dark-text;
       width: 100%;
       justify-content: center;
       margin-bottom: 30px;
@@ -213,7 +213,7 @@ $background-color: #ecf0f1;
 
       &:hover {
         outline: none;
-        background-color: $secondary-color;
+        background-color: $dark-text;
       }
     }
 
