--- a/src/app/pages/components/creoter-form/creoter-form.component.scss
+++ b/src/app/pages/components/creoter-form/creoter-form.component.scss
@@ -58,21 +58,20 @@ $background-color: #ecf0f1;
 
       .p-float-label {
         position: relative;
-        margin-bottom: 30px;
+        margin-bottom:10px;
         input {
           width: 100%;
           padding: 15px;
           padding-left: 40px;
           font-size: 1rem;
-          border: none;
-          border-bottom: 2px solid $primary-color;
+          border: 1px solid $dark-text;
           background-color: transparent;
           color: $dark-text;
           transition: border-color 0.3s;
 
           &:focus {
             outline: none;
-            border-bottom: 2px solid $secondary-color;
+
           }
         }
 
@@ -135,7 +134,7 @@ $background-color: #ecf0f1;
         width: 100%;
         padding: 15px;
         margin-top:10px;
-        background-color: $primary-color;
+        background-color: $dark-text;
         color: $light-text;
         font-size: 1rem;
         border: none;
@@ -144,7 +143,7 @@ $background-color: #ecf0f1;
         transition: background-color 0.3s;
 
         &:hover {
-          background-color: $secondary-color;
+          background-color: $dark-text;
         }
       }
     }
@@ -221,7 +220,7 @@ $background-color: #ecf0f1;
 
     }
 
-   
+
 
   }
   .dropdown {
@@ -229,8 +228,9 @@ $background-color: #ecf0f1;
     display: flex;
     font-size: 1rem;
     border: none;
+    margin-top: 20px;
     padding-left: 25px;
-    border-bottom: 2px solid #3498db;
+    border: 1px solid $dark-text;
     background-color: transparent;
     color: #34495e;
     transition: border-color 0.3s;
