--- a/src/app/pages/components/product/card-detail/card-detail.component.scss
+++ b/src/app/pages/components/product/card-detail/card-detail.component.scss
@@ -57,6 +57,7 @@ $background-color: #ecf0f1;
     border: none;
     width: 100%;
     height: 45px;
+    font-size: 1.1rem;
     justify-content: center;
   }
 }
