--- a/src/app/dashboard/components/profil-management/profil-management.component.scss
+++ b/src/app/dashboard/components/profil-management/profil-management.component.scss
@@ -31,7 +31,7 @@ $background-color: #ecf0f1;
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 50%; // Tam genişlikte olacak
+        width: 100%;
 
         .p-float-radio {
           display: flex;
@@ -51,15 +51,15 @@ $background-color: #ecf0f1;
             padding: 10px;
             padding-left: 35px;
             font-size: 1rem;
-            border: none;
-            border-bottom: 2px solid $dark-text;
+            border-radius: 5px;
+            border: 1px solid $dark-text;
             background-color: transparent;
             color: #34495e;
             transition: border-color 0.3s;
 
             &:focus {
               outline: none;
-              border-bottom: 2px solid $dark-text;
+              border: 1px solid $dark-text;
             }
           }
 
@@ -105,15 +105,14 @@ $background-color: #ecf0f1;
                 padding: 10px;
                 padding-left: 30px;
                 font-size: 1rem;
-                border: none;
-                border-bottom: 2px solid $dark-text;
+                border: 1px solid $dark-text;
                 background-color: transparent;
                 color: #34495e;
                 transition: border-color 0.3s;
 
                 &:focus {
                   outline: none;
-                  border-bottom: 2px solid $dark-text;
+                  border: 1px solid $dark-text;
                 }
               }
 
@@ -133,7 +132,7 @@ $background-color: #ecf0f1;
               margin-top: 10px;
 
               button {
-                width: 100%; // Tam genişlikte olacak
+                width: 100%;
                 padding: 15px;
                 background-color: $dark-text;
                 justify-content: center;
@@ -158,23 +157,22 @@ $background-color: #ecf0f1;
 
 :host ::ng-deep {
   .calendar {
-    width: 95%;
+    width: calc(100% - 30px);
     input {
       display: flex;
       flex-direction: column;
-      width: calc(90% - 30px);
+      width: calc(100% - 30px);
       padding: 10px;
       padding-left: 30px;
       font-size: 1rem;
-      border: none;
-      border-bottom: 2px solid $dark-text;
+      border: 1px solid $dark-text;
       background-color: transparent;
       color: #34495e;
       transition: border-color 0.3s;
 
       &:focus {
         outline: none;
-        border-bottom: 2px solid $dark-text;
+        border: 1px solid $dark-text;
       }
     }
 
@@ -209,7 +207,8 @@ $background-color: #ecf0f1;
 
     .button{
       background-color: $dark-text;
-      width: 100%;
+      width: calc(100% - 30px);
+      height: 45px;
       justify-content: center;
       margin-bottom: 30px;
       border: none;
