--- a/src/app/pages/components/orders/content-table/content-table.component.html
+++ b/src/app/pages/components/orders/content-table/content-table.component.html
@@ -18,15 +18,19 @@
     <div class="col-12">
       <div class="p-2 my-4 flex flex-column lg:flex-row justify-content-between align-items-center" *ngFor="let product of order.orders; let i = index;">
         <div class="flex flex-column lg:flex-row justify-content-center align-items-center px-2">
-          <img [src]="getFileUrl(product?.product?.file)" alt="product" class="w-8rem h-8rem mr-3 flex-shrink-0" />
+          <img [src]="getFileUrl(product?.product?.file)" alt="product" class="w-12rem h-12rem mr-3 flex-shrink-0" />
           <div class="flex flex-column my-auto text-center md:text-left">
-            <span class="mb-3 mt-3">
+            <span class="mb-3 mt-3 text-600 text-lg ">
               {{'contentOrdersForm.name' |  transloco}}
-              <span class="text-700 mb-3 mt-3 lg:mt-0">{{ product?.product?.name }}</span>
+              <span class="text-900 text-lg mb-3 mt-3 lg:mt-0 ml-2">{{ product?.product?.name }}</span>
             </span>
-            <span>
+            <span class="mb-3 mt-3 text-600 text-lg ">
               {{'contentOrdersForm.quantity' |  transloco}}
-              <span class="text-700 text-sm mb-3">{{ product?.product?.quantity }}</span>
+              <span class="text-900 text-lg mb-3 ml-2">{{ product?.product?.quantity }}</span>
+            </span>
+            <span class="mb-3 mt-3 text-600 text-lg ">
+              {{'contentOrdersForm.seller' |  transloco}}
+              <span class="text-900 text-lg mb-3 ml-2">{{ product?.product?.companyName }}</span>
             </span>
           </div>
         </div>
