--- a/src/app/pages/components/favorites/content-favorites/content-favorites.component.html
+++ b/src/app/pages/components/favorites/content-favorites/content-favorites.component.html
@@ -4,68 +4,18 @@
   <div class="text-900 text-4xl mb-4">
     {{ "favoritesForm.header" | transloco }}
   </div>
-  <div>
-    <div class="align-items-center"
-      *ngFor="let product of products"
-    >
-        <div class="shadow-1 p-4 flex flex-row align-items-center ">
-            <div class="image flex mx-1">
-              <img
-                [src]="getFileUrl(product?.file)"
-                [alt]="product?.name"
-                width="100"
-                height="100"
-              />
-            </div>
-            <div class="name flex align-items-center mx-4">
-              <span>{{
-                product?.name | truncate : 15
-              }}</span>
-            </div>
-            <div class="category flex align-items-center mx-4">
-              <span>{{
-                product?.category | categoryStatus
-              }}</span>
-            </div>
-          <div class="description flex align-items-center mx-4">
-            <p >
-              {{ product?.description | truncate : 230 }}
-            </p>
-          </div>
-
-          <div class="price flex align-items-center mx-4">
-            <span
-              >{{ product?.priceStacked | currency:'USD' }}</span
-            >
-            <i
-              class="pi text-2xl cursor-pointer ml-3"
-              [ngClass]="{
-                'pi-heart text-600': !liked,
-                'pi-heart-fill text-red-500': liked
-              }"
-              (click)="deleteFavorites(product.productId)"
-            ></i>
-          </div>
-        </div>
-    </div>
-  </div>
-
   <hr>
-
-  <div class="text-900 text-4xl mb-4">
-    {{ "favoritesForm.header" | transloco }}
-  </div>
   <div>
     <div class="align-items-center"
       *ngFor="let product of products"
     >
-        <div class="shadow-1 p-4 flex flex-row align-items-center ">
-            <div class="image flex mx-1">
+        <div class="shadow-1 p-4 flex flex-row align-items-center cursor-pointer " >
+            <div class="image flex mx-1" [routerLink]="['/pages/product', product.productId]">
               <img
                 [src]="getFileUrl(product?.file)"
                 [alt]="product?.name"
-                width="100"
-                height="100"
+                width="150"
+                height="150"
               />
             </div>
             <div class="name flex align-items-center mx-4">
@@ -80,7 +30,7 @@
             </div>
           <div class="description flex align-items-center mx-4">
             <p >
-              {{ product?.description | truncate : 230 }}
+              {{ product?.description | truncate : 300 }}
             </p>
           </div>
 
@@ -100,6 +50,8 @@
         </div>
     </div>
   </div>
+
+
 
 </div>
 
